tests/sksl/errors/ReservedNameHvec3.glsl
### Compilation failed:

error: 1: 'hvec3' is a reserved word
1 error
